# EMaxim

./: .gitignore  CMakeLists.txt  README.md  circular_postorder.py  debug_prob_parser.cpp  emtr_reproductions.py  fifty_reproductions_emtr.py  flower_plot.py  probparser  pyproject.toml  ring_plot.py  start_emtr.py  start_maxim.py  test_EMssh.py  test_dirichlet.ipynb  test_maxim.py  visualize_EM.ipynb
.maxim/: pyvenv.cfg
biblio/: maxim.bib
docs/: Randall_Dirichlet.lyx  Randall_Dirichlet.lyx~
results/: Aug_13_1_rep_10_max_iter_1000_conv_thresh_0.0005.diri_prob  Aug_13_1_rep_10_max_iter_1000_conv_thresh_0.0005.dirichlet_rooting_initial_final_rep_loglik  Aug_13_1_rep_1_max_iter_1000_conv_thresh_0.0005.SSH_rooting_initial_final_rep_loglik  Aug_13_1_rep_1_max_iter_1000_conv_thresh_0.0005.diri_prob  Aug_13_1_rep_1_max_iter_1000_conv_thresh_0.0005.dirichlet_rooting_initial_final_rep_loglik  Aug_13_1_rep_1_max_iter_1000_conv_thresh_0.0005.emt_log  Aug_13_1_rep_1_max_iter_1000_conv_thresh_0.0005.pars_prob  Aug_13_1_rep_1_max_iter_1000_conv_thresh_0.0005.pars_rooting_initial_final_rep_loglik  Aug_13_1_rep_1_max_iter_1000_conv_thresh_0.0005.probability_max_ll_diri  Aug_13_1_rep_23_max_iter_1000_conv_thresh_0.0005.SSH_rooting_initial_final_rep_loglik  Aug_13_1_rep_23_max_iter_1000_conv_thresh_0.0005.diri_prob  Aug_13_1_rep_23_max_iter_1000_conv_thresh_0.0005.dirichlet_rooting_initial_final_rep_loglik  Aug_13_1_rep_23_max_iter_1000_conv_thresh_0.0005.emt_log  Aug_13_1_rep_23_max_iter_1000_conv_thresh_0.0005.pars_prob  Aug_13_3_rep_1000_max_iter_1000_conv_thresh_0.0005.diri_prob  (+111 more)
(+3 files in other folders)
